# riotkit-do

./: .env  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  requirements-dev.txt  requirements.txt  setup-venv.sh  setup.cfg  setup.py
.ci/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  sh  start.sh
.rkd/: concept.py  makefile.py  makefile.yaml
docs/: Makefile  requirements.txt
rkd/: argparsing.py  argparsingblocks.py  audit.py  bootstrap.py  context.py  contract.py  exception.py  packaging.py  process.py  resolver.py  taskutil.py  test.py  validator.py  yaml_context.py  yaml_parser.py
src/core/: MANIFEST.in  Pipfile  README.md  pyproject.toml  pytest.ini  requirements-external.txt  requirements-subpackages.txt  requirements.txt  setup.cfg  setup.json  setup.py  test-intelji.py
src/core/rkd/core/: audit.py  bootstrap.py  context.py  contract.py  dto.py  env.py  exception.py  iterator.py  resolver.py  resolver_result.py  task_factory.py  taskutil.py  test.py  validator.py  yaml_context.py
src/core/rkd/core/api/: contract.py  decorators.py  inputoutput.py  lifecycle.py  parsing.py  syntax.py  testing.py
src/core/rkd/core/argparsing/: blocks.py  model.py  parser.py
src/core/rkd/core/execution/: analysis.py  declarative.py  executor.py  lifecycle.py  results.py
src/core/rkd/core/misc/initial-structure/: rkdw.py
src/core/rkd/core/misc/initial-structure/.rkd/: makefile.py
src/core/rkd/core/misc/internal/: makefile.py
src/core/rkd/core/misc/internal/empty/: makefile.py
src/core/rkd/core/misc/internal/schema/: org.riotkit.rkd-yaml-v1.json
src/core/rkd/core/standardlib/: __init__.py  core.py  docker.py  env.py  io.py  jinja.py  shell.py  syntax.py
src/core/tests/: conftest.py  test_aliasgroups.py  test_api_parsing.py  test_api_syntax.py  test_argparsing.py  test_argparsing_blocks.py  test_context.py  test_contract_argparseargument.py  test_contract_argumentenv.py  test_contract_execution_context.py  test_contract_task_interface.py  test_declarativeexecutor.py  test_executor.py  test_functional.py  test_functional_pipelines.py  test_functional_subprojects.py  test_inputoutput_env.py  test_inputoutput_error_handling.py  test_inputoutput_io.py  test_inputoutput_standardoutputreplication.py  test_inputoutput_wizard.py  test_packaging.py  test_resolver.py  test_standardlib_createstructure.py  test_standardlib_io_archivepackagingtask.py  test_standardlib_jinja_file_render.py  test_standardlib_jinja_language.py  test_standardlib_jinja_render_directory.py  test_standardlib_lineinfiletask.py  test_standardlib_taskslistingtask.py  test_syntax_task_declaration.py  test_syntax_taskaliasdeclaration.py  test_task_factory.py  test_taskutil.py  test_temp.py  test_yaml_context.py  test_yaml_parser.py
src/core/tests/internal-samples/jinja2/: example-to-extend.j2  example-with-extends.j2
src/core/tests/internal-samples/jinja2-filename-templating/: lyrics---song_name--.txt.j2
src/core/tests/internal-samples/subprojects/.rkd/: makefile.yaml
src/core/tests/internal-samples/subprojects/testsubproject1/.rkd/: makefile.yaml
src/core/tests/internal-samples/subprojects/testsubproject1/docs/.rkd/: makefile.yaml
src/core/tests/internal-samples/subprojects/testsubproject1/infrastructure/.rkd/: makefile.py
src/core/tests/internal-samples/subprojects/testsubproject1/infrastructure/terraform/.rkd/: makefile.py
src/process/: MANIFEST.in  README.md  pyproject.toml  requirements-external.txt  setup.cfg  setup.json  setup.py
src/process/rkd/process/: __init__.py  env.py
src/process/tests/: test_process.py
src/pythonic/: MANIFEST.in  pyproject.toml  requirements-external.txt  requirements-subpackages.txt  setup.cfg  setup.json  setup.py
src/pythonic/example/.rkd/: makefile.yaml
src/pythonic/rkd/pythonic/: __init__.py  core.py
src/pythonic/tests/: test_standardlib_python_publish.py  test_standardlib_unittest.py
subpackages/: README.md
subpackages/rkd_python/: Makefile  README.rst  requirements.txt  rkd.sh  setup.cfg  setup.py
subpackages/rkd_python/.rkd/: makefile.yaml
subpackages/rkd_python/example/.rkd/: makefile.yaml
subpackages/rkd_python/rkd_python/: __init__.py  core.py
subpackages/rkd_python/src/rkd_python/: __init__.py
subpackages/rkd_python/test/: test_standardlib_python_publish.py  test_standardlib_unittest.py
test/: test_aliasgroups.py  test_api_parsing.py  test_argparsing.py  test_argparsing_blocks.py  test_context.py  test_contract.py  test_contract_argparseargument.py  test_contract_argumentenv.py  test_contract_execution_context.py  test_contract_task_interface.py  test_declarativeexecutor.py  test_executor.py  test_functional.py  test_inputoutput_env.py  test_inputoutput_error_handling.py  test_inputoutput_io.py  test_inputoutput_standardoutputreplication.py  test_inputoutput_wizard.py  test_packaging.py  test_process.py  test_resolver.py  test_standardlib_createstructure.py  test_standardlib_jinja_file_render.py  (+9 more)
(+150 files in other folders)
