[metadata]
name = rkd
author = RiotKit non-profit organization
author-email = riotkit@riseup.net
summary = Task executor, handy for DevOps and not only - balance between Makefile and Gradle.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://riotkit.org
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
keywords =
    setup
    distutils

[files]
data-files = /usr/share/rkd = ./rkd/misc/*
packages_root = ./
packages =
    rkd

[entry_points]
console_scripts =
    rkd = rkd.bootstrap:main
