[metadata]
name = rkd.core
author = RiotKit non-profit organization
author_email = riotkit@riseup.net
summary = Task executor, handy for DevOps and not only - balance between Makefile and Gradle.
description_file = ../../README.rst
description_content_type = text/x-rst; charset=UTF-8
home_page = https://riotkit.org
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
keywords =
    setup
    distutils

[files]
packages_root = ./
packages =
    rkd

[entry_points]
console_scripts =
    rkd = rkd.core.bootstrap:main
