[metadata]
name = rkd.process
author = RiotKit non-profit organization
author-email = riotkit@riseup.net
summary = rkd.process provides easy process interaction and output capturing/redirecting, wraps subprocess from Python's standard library.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://riotkit.org
license = Apache-2
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
keywords =
    setup
    distutils
