[metadata]
name = rkd.pythonic
author = RiotKit non-profit organization
author_email = riotkit@riseup.net
summary = Python-related tasks for RKD, including building, testing and releasing packages
description_file = README.rst
description_content_type = text/x-rst; charset=UTF-8
home_page = https://riotkit-do.readthedocs.io/en/latest/standardlib/python.html
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    rkd
    building
    continuous-integration
    development
    devops
